manifest/base/springboot/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: default
spec:
  selector:
    app: spring-petclinic
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
